Link color tweaks and some refactoring.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -52,7 +52,7 @@
                             <h2 class="h6">
                                 Researchers
                             </h2>
-                            <ul class="list list__links">
+                            <ul class="footer_list list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Datasets
@@ -69,7 +69,7 @@
                             <h2 class="h6">
                                 Developers
                             </h2>
-                            <ul class="list list__links">
+                            <ul class="footer_list list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         API's
@@ -86,7 +86,7 @@
                             <h2 class="h6">
                                 Educators
                             </h2>
-                            <ul class="list list__links">
+                            <ul class="footer_list list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Toolkits
@@ -108,7 +108,7 @@
                             <h2 class="h6">
                                 Regulated entities
                             </h2>
-                            <ul class="list list__links">
+                            <ul class="footer_list list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Regulations
@@ -175,7 +175,7 @@
 
             <div class="footer-post">
 
-                <ul class="list list__unstyled list__spaced footer_list">
+                <ul class="footer_long-list">
                     <li class="list_item">
                         <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
                             Privacy policy & legal notices
