--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9161,10 +9161,67 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     color: #101820;
   }
 }
-.footer_list {
-  margin-bottom: 0;
-}
 .footer_list .list_link {
+  color: #43484e;
+  border-color: #43484e;
+}
+.footer_list .list_link:visited,
+.footer_list .list_link.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_list .list_link:hover,
+.footer_list .list_link.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_list .list_link:active,
+.footer_list .list_link.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_long-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+.footer_long-list .list_item {
+  margin-left: 0;
+}
+@media only all and (max-width: 29.9375em) {
+  .footer_long-list {
+    margin-bottom: 0.625em;
+  }
+  .footer_long-list .list_item + .list_item {
+    margin-top: 1.5em;
+  }
+}
+@media only all and (min-width: 30em) {
+  .footer_long-list {
+    padding-left: 0;
+  }
+  .footer_long-list .list_item {
+    display: inline-block;
+  }
+  .lt-ie8 .footer_long-list .list_item {
+    display: inline;
+  }
+  .footer_long-list .list_item {
+    margin-right: 0.25em;
+    margin-left: 0;
+  }
+}
+@media only all and (min-width: 30em) {
+  .footer_long-list .list_item {
+    margin-right: 26px;
+    margin-bottom: 0.625em;
+  }
+}
+.footer_long-list .list_link {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -9172,50 +9229,50 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   border-color: #101820;
   border-bottom-width: 0 !important;
 }
-.footer_list .list_link em,
-.footer_list .list_link i {
+.footer_long-list .list_link em,
+.footer_long-list .list_link i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
-.lt-ie9 .footer_list .list_link em,
-.lt-ie9 .footer_list .list_link i {
+.lt-ie9 .footer_long-list .list_link em,
+.lt-ie9 .footer_long-list .list_link i {
   font-style: normal !important;
 }
-.footer_list .list_link strong,
-.footer_list .list_link b {
+.footer_long-list .list_link strong,
+.footer_long-list .list_link b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
-.lt-ie9 .footer_list .list_link strong,
-.lt-ie9 .footer_list .list_link b {
+.lt-ie9 .footer_long-list .list_link strong,
+.lt-ie9 .footer_long-list .list_link b {
   font-weight: normal !important;
 }
-.footer_list .list_link:visited,
-.footer_list .list_link.visited {
+.footer_long-list .list_link:visited,
+.footer_long-list .list_link.visited {
   border-color: #101820;
   color: #101820;
 }
-.footer_list .list_link:hover,
-.footer_list .list_link.hover {
+.footer_long-list .list_link:hover,
+.footer_long-list .list_link.hover {
   border-color: #101820;
   color: #101820;
 }
-.footer_list .list_link:focus,
-.footer_list .list_link.focus {
+.footer_long-list .list_link:focus,
+.footer_long-list .list_link.focus {
   border-color: #101820;
   color: #101820;
 }
-.footer_list .list_link:active,
-.footer_list .list_link.active {
+.footer_long-list .list_link:active,
+.footer_long-list .list_link.active {
   border-color: #101820;
   color: #101820;
 }
-.footer_list .list_link:hover,
-.footer_list .list_link.hover,
-.footer_list .list_link:focus,
-.footer_list .list_link.focus {
+.footer_long-list .list_link:hover,
+.footer_long-list .list_link.hover,
+.footer_long-list .list_link:focus,
+.footer_long-list .list_link.focus {
   border-bottom-width: 1px !important;
 }
 .footer-pre {
@@ -9524,32 +9581,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     padding-top: 1.875em;
     margin-top: 1.875em;
     border-top: 1px solid #babbbd;
-  }
-}
-.footer-post .footer_list {
-  margin-bottom: 0.625em;
-}
-@media only all and (min-width: 30em) {
-  .footer-post .footer_list {
-    margin-bottom: 0;
-    padding-left: 0;
-  }
-  .footer-post .footer_list .list_item {
-    display: inline-block;
-  }
-  .lt-ie8 .footer-post .footer_list .list_item {
-    display: inline;
-  }
-  .footer-post .footer_list .list_item {
-    margin-right: 0.25em;
-    margin-left: 0;
-  }
-  .footer-post .footer_list .list_item {
-    margin-right: 30px;
-    margin-bottom: 0.625em;
-  }
-  .footer-post .footer_list .list_item + .list_item {
-    margin-top: 0;
   }
 }
 /* topdoc
