More refactoring and splits out footer into its own less file.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -3,7 +3,7 @@
 
             <div class="footer-pre">
 
-                <ul class="list list__horizontal footer_share-icon-list">
+                <ul class="footer_share-icon-list">
                     <li class="list_item">
                         <a class="share-icon share-icon__large"
                            href="https://facebook.com/cfpb">
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="list list__links footer_nav-list">
+                <ul class="footer_nav-list">
                     <li class="list_item">
                         <a class="list_link" href="/contact-us/">
                             Contact us
@@ -52,7 +52,7 @@
                             <h2 class="h6">
                                 Researchers
                             </h2>
-                            <ul class="footer_list list list__links">
+                            <ul class="footer_list">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Datasets
@@ -69,7 +69,7 @@
                             <h2 class="h6">
                                 Developers
                             </h2>
-                            <ul class="footer_list list list__links">
+                            <ul class="footer_list">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         API's
@@ -86,7 +86,7 @@
                             <h2 class="h6">
                                 Educators
                             </h2>
-                            <ul class="footer_list list list__links">
+                            <ul class="footer_list">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Toolkits
@@ -108,7 +108,7 @@
                             <h2 class="h6">
                                 Regulated entities
                             </h2>
-                            <ul class="footer_list list list__links">
+                            <ul class="footer_list">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Regulations
