--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3215,14 +3215,49 @@ Main content...
 
 .footer_share-icon-list {
   margin-bottom: 1.875em;
+  padding-left: 0;
+}
+
+.footer_share-icon-list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer_share-icon-list .list_item {
+  display: inline;
+}
+
+.footer_share-icon-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
 }
 
 .footer_share-icon-list {
   margin-bottom: 0;
 }
 
-.footer_nav-list.list__links {
-  border-top-color: #101820;
+.footer_nav-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_nav-list .list_item {
+  margin-left: 0;
+}
+
+.footer_nav-list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_nav-list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_nav-list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
 }
 
 .footer_nav-list .list_link {
@@ -3495,6 +3530,31 @@ Main content...
 .footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
   border-color: #101820;
   color: #101820;
+}
+
+.footer_list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_list .list_item {
+  margin-left: 0;
+}
+
+.footer_list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
 }
 
 .footer_list .list_link {
