--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3371,14 +3371,62 @@ Main content...
 }
 .footer_share-icon-list {
   margin-bottom: 1.875em;
+  padding-left: 0;
+}
+.footer_share-icon-list .list_item {
+  display: inline-block;
+}
+.lt-ie8 .footer_share-icon-list .list_item {
+  display: inline;
+}
+.footer_share-icon-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
 }
 @media only all and (min-width: 48em) {
   .footer_share-icon-list {
     margin-bottom: 0;
   }
 }
-.footer_nav-list.list__links {
-  border-top-color: #101820;
+.footer_nav-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+.footer_nav-list .list_item {
+  margin-left: 0;
+}
+.footer_nav-list .list_item {
+  margin-bottom: 0.625em;
+}
+@media only all and (max-width: 47.9375em) {
+  .footer_nav-list {
+    border-top: 1px dotted #0072ce;
+  }
+  .footer_nav-list .list_item {
+    display: block;
+    margin-bottom: 0;
+  }
+  .footer_nav-list .list_link {
+    display: block;
+    padding: 0.625em 0;
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer_nav-list.list__icons .list_link {
+    margin-bottom: 0.9375em;
+    margin-left: 1.5em;
+    position: relative;
+  }
+  .footer_nav-list.list__icons .list_icon {
+    position: absolute;
+    top: 0.0625em;
+    left: -1.625em;
+  }
+}
+@media only all and (max-width: 47.9375em) {
+  .footer_nav-list {
+    border-top-color: #101820;
+  }
 }
 .footer_nav-list .list_link {
   font-size: 1.125em;
@@ -3621,6 +3669,41 @@ Main content...
   .footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
     border-color: #101820;
     color: #101820;
+  }
+}
+.footer_list {
+  padding-left: 0;
+  list-style-type: none;
+}
+.footer_list .list_item {
+  margin-left: 0;
+}
+.footer_list .list_item {
+  margin-bottom: 0.625em;
+}
+@media only all and (max-width: 47.9375em) {
+  .footer_list {
+    border-top: 1px dotted #0072ce;
+  }
+  .footer_list .list_item {
+    display: block;
+    margin-bottom: 0;
+  }
+  .footer_list .list_link {
+    display: block;
+    padding: 0.625em 0;
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer_list.list__icons .list_link {
+    margin-bottom: 0.9375em;
+    margin-left: 1.5em;
+    position: relative;
+  }
+  .footer_list.list__icons .list_icon {
+    position: absolute;
+    top: 0.0625em;
+    left: -1.625em;
   }
 }
 .footer_list .list_link {
