--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9638,14 +9638,49 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .footer_share-icon-list {
   margin-bottom: 1.875em;
+  padding-left: 0;
+}
+
+.footer_share-icon-list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer_share-icon-list .list_item {
+  display: inline;
+}
+
+.footer_share-icon-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
 }
 
 .footer_share-icon-list {
   margin-bottom: 0;
 }
 
-.footer_nav-list.list__links {
-  border-top-color: #101820;
+.footer_nav-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_nav-list .list_item {
+  margin-left: 0;
+}
+
+.footer_nav-list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_nav-list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_nav-list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
 }
 
 .footer_nav-list .list_link {
@@ -9918,6 +9953,31 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
   border-color: #101820;
   color: #101820;
+}
+
+.footer_list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_list .list_item {
+  margin-left: 0;
+}
+
+.footer_list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
 }
 
 .footer_list .list_link {
@@ -15193,6 +15253,669 @@ a.focus .summary_header {
   zoom: 1;
   display: block;
   width: auto;
+}
+
+/* topdoc
+    name: EOF
+    eof: true
+*/
+
+/* ==========================================================================
+   cfgov-refresh
+   footer
+   ========================================================================== */
+
+/* topdoc
+  name: CF.gov site-wide footer
+  family: cfgov-footer
+  patterns:
+    - notes:
+        - "For the markup please see _layouts/footer.html."
+  tags:
+    - cfgov-footer
+*/
+
+.footer {
+  padding-top: 3.125em;
+  padding-bottom: 3.125em;
+  border-top: 3px solid #2cb34a;
+  background: #f1f2f2;
+}
+
+.footer_share-icon-list {
+  margin-bottom: 1.875em;
+  padding-left: 0;
+}
+
+.footer_share-icon-list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer_share-icon-list .list_item {
+  display: inline;
+}
+
+.footer_share-icon-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
+}
+
+.footer_share-icon-list {
+  margin-bottom: 0;
+}
+
+.footer_nav-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_nav-list .list_item {
+  margin-left: 0;
+}
+
+.footer_nav-list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_nav-list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_nav-list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
+}
+
+.footer_nav-list .list_link {
+  font-size: 1.125em;
+  color: #101820;
+  border-color: #101820;
+}
+
+.footer_nav-list .list_link:visited,
+.footer_nav-list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:focus,
+.footer_nav-list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:active,
+.footer_nav-list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link {
+  margin-right: 1.36363636em;
+  font-size: 1.375em;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  border-bottom-width: 0 !important;
+}
+
+.footer_nav-list .list_link em,
+.footer_nav-list .list_link i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .footer_nav-list .list_link em,
+.lt-ie9 .footer_nav-list .list_link i {
+  font-style: normal !important;
+}
+
+.footer_nav-list .list_link strong,
+.footer_nav-list .list_link b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_nav-list .list_link strong,
+.lt-ie9 .footer_nav-list .list_link b {
+  font-weight: normal !important;
+}
+
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover,
+.footer_nav-list .list_link:focus,
+.footer_nav-list .list_link.focus {
+  border-bottom-width: 1px !important;
+}
+
+.footer_nav-list .list_link.list_link__disabled {
+  color: #babbbd;
+  border-color: #babbbd;
+  border-bottom: 1px dotted;
+}
+
+.footer_nav-list .list_link.list_link__disabled:visited,
+.footer_nav-list .list_link.list_link__disabled.visited {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link.list_link__disabled:hover,
+.footer_nav-list .list_link.list_link__disabled.hover {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link.list_link__disabled:focus,
+.footer_nav-list .list_link.list_link__disabled.focus {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link.list_link__disabled:active,
+.footer_nav-list .list_link.list_link__disabled.active {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link.list_link__disabled {
+  border-bottom-width: 0 !important;
+}
+
+.footer_logo {
+  margin-bottom: 0.625em;
+}
+
+.footer_logo {
+  margin-bottom: 0;
+}
+
+.footer_logo .logo {
+  width: 218px;
+}
+
+.footer_address {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.footer_address em,
+.footer_address i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .footer_address em,
+.lt-ie9 .footer_address i {
+  font-style: normal !important;
+}
+
+.footer_address strong,
+.footer_address b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_address strong,
+.lt-ie9 .footer_address b {
+  font-weight: normal !important;
+}
+
+.footer_address {
+  margin-bottom: 0;
+  font-size: 0.75em;
+}
+
+.footer_address-word-break {
+  display: block;
+}
+
+.footer_general-inqueries {
+  font-size: 0.75em;
+}
+
+.footer_general-inqueries-label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_general-inqueries-label {
+  font-weight: normal !important;
+}
+
+.footer_general-inqueries-label {
+  display: block;
+  margin-bottom: 0.5em;
+}
+
+.footer_general-inqueries .list__links {
+  margin-bottom: 0;
+  font-size: 1.125em;
+  border-top-color: #43484e;
+}
+
+.footer_general-inqueries .list_link {
+  color: #43484e;
+  border-color: #43484e;
+}
+
+.footer_general-inqueries .list_link:visited,
+.footer_general-inqueries .list_link.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list_link:hover,
+.footer_general-inqueries .list_link.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list_link:focus,
+.footer_general-inqueries .list_link.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list_link:active,
+.footer_general-inqueries .list_link.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list_link {
+  color: #0072ce;
+  border-color: #0072ce;
+}
+
+.footer_general-inqueries .list_link:visited,
+.footer_general-inqueries .list_link.visited {
+  border-color: #005e5d;
+  color: #005e5d;
+}
+
+.footer_general-inqueries .list_link:hover,
+.footer_general-inqueries .list_link.hover {
+  border-color: #7fb8e6;
+  color: #7fb8e6;
+}
+
+.footer_general-inqueries .list_link:focus,
+.footer_general-inqueries .list_link.focus {
+  border-color: #0072ce;
+  color: #0072ce;
+}
+
+.footer_general-inqueries .list_link:active,
+.footer_general-inqueries .list_link.active {
+  border-color: #002d72;
+  color: #002d72;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone {
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+  display: block;
+  margin-bottom: 0.33333333em;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:visited,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:hover,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:focus,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:active,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_list .list_item {
+  margin-left: 0;
+}
+
+.footer_list .list_item {
+  margin-bottom: 0.625em;
+}
+
+.footer_list.list__icons .list_link {
+  margin-bottom: 0.9375em;
+  margin-left: 1.5em;
+  position: relative;
+}
+
+.footer_list.list__icons .list_icon {
+  position: absolute;
+  top: 0.0625em;
+  left: -1.625em;
+}
+
+.footer_list .list_link {
+  color: #43484e;
+  border-color: #43484e;
+}
+
+.footer_list .list_link:visited,
+.footer_list .list_link.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_list .list_link:hover,
+.footer_list .list_link.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_list .list_link:active,
+.footer_list .list_link.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_long-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer_long-list .list_item {
+  margin-left: 0;
+}
+
+.footer_long-list {
+  padding-left: 0;
+}
+
+.footer_long-list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer_long-list .list_item {
+  display: inline;
+}
+
+.footer_long-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
+}
+
+.footer_long-list .list_item {
+  margin-right: 26px;
+  margin-bottom: 0.625em;
+}
+
+.footer_long-list .list_link {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+}
+
+.footer_long-list .list_link em,
+.footer_long-list .list_link i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .footer_long-list .list_link em,
+.lt-ie9 .footer_long-list .list_link i {
+  font-style: normal !important;
+}
+
+.footer_long-list .list_link strong,
+.footer_long-list .list_link b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_long-list .list_link strong,
+.lt-ie9 .footer_long-list .list_link b {
+  font-weight: normal !important;
+}
+
+.footer_long-list .list_link:visited,
+.footer_long-list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_long-list .list_link:hover,
+.footer_long-list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_long-list .list_link:focus,
+.footer_long-list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_long-list .list_link:active,
+.footer_long-list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_long-list .list_link:hover,
+.footer_long-list .list_link.hover,
+.footer_long-list .list_link:focus,
+.footer_long-list .list_link.focus {
+  border-bottom-width: 1px !important;
+}
+
+.footer-pre {
+  position: relative;
+  margin-bottom: 2.8125em;
+}
+
+.footer-pre {
+  padding-bottom: 1.875em;
+  margin-bottom: 1.875em;
+  border-bottom: 1px solid #babbbd;
+}
+
+.footer-pre .footer_share-icon-list {
+  position: absolute;
+  top: -9px;
+  right: 0;
+}
+
+.footer-pre .footer_nav-list {
+  margin-bottom: 0;
+}
+
+.footer-pre .footer_nav-list {
+  padding-left: 0;
+}
+
+.footer-pre .footer_nav-list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer-pre .footer_nav-list .list_item {
+  display: inline;
+}
+
+.footer-pre .footer_nav-list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
+}
+
+.footer-pre .footer_nav-list .list_item {
+  margin-bottom: 0;
+}
+
+.footer-left {
+  margin-bottom: 2.8125em;
+}
+
+.footer-left .footer_nested-col-group {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.footer-left .footer_logo {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+}
+
+.ie .footer-left .footer_logo {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_logo {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-left .footer_address {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+}
+
+.ie .footer-left .footer_address {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_address {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-left .footer_general-inqueries {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+}
+
+.ie .footer-left .footer_general-inqueries {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_general-inqueries {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-right {
+  padding-bottom: 1.875em;
+  margin-bottom: 1.875em;
+  border-bottom: 1px solid #babbbd;
+}
+
+.footer-right .footer_nested-col-group {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.footer-right .footer_col {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+}
+
+.ie .footer-right .footer_col {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-right .footer_col {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-right .list {
+  margin-bottom: 0;
+}
+
+.footer-post {
+  padding-top: 1.875em;
+  margin-top: 1.875em;
+  border-top: 1px solid #babbbd;
 }
 
 /* topdoc
