--- a/static/css/main.less
+++ b/static/css/main.less
@@ -109,3 +109,4 @@ img {
 @import (less) "contact-us.less";
 @import (less) "bureau.less";
 @import (less) "media.less";
+@import (less) "footer.less";
