--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8640,6 +8640,21 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .lt-ie9 .content_title__medium b {
   font-weight: normal !important;
 }
+@media only all and (max-width: 37.4375em) {
+  .content_title__medium {
+    margin-top: 0;
+    margin-bottom: 0.27777778em;
+    font-size: 1.125em;
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.22222222;
+    margin-bottom: 1.16666667em;
+  }
+  .lt-ie9 .content_title__medium {
+    font-weight: normal !important;
+  }
+}
 .content_title__extra-small {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
