Adds more social account icons.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -18,6 +18,27 @@
                             <span class="u-visually-hidden">Visit us on Twitter</span>
                         </a>
                     </li>
+                    <li class="list_item">
+                        <a class="share-icon share-icon__large"
+                           href="https://www.linkedin.com/company/consumer-financial-protection-bureau">
+                            <span class="cf-icon cf-icon-linkedin-square"></span>
+                            <span class="u-visually-hidden">Visit us on Linkedin</span>
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="share-icon share-icon__large"
+                           href="https://www.youtube.com/user/cfpbvideo">
+                            <span class="cf-icon cf-icon-youtube-square"></span>
+                            <span class="u-visually-hidden">Visit us on YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="share-icon share-icon__large"
+                           href="https://www.flickr.com/photos/cfpbphotos">
+                            <span class="cf-icon cf-icon-flickr-square"></span>
+                            <span class="u-visually-hidden">Visit us on Flickr</span>
+                        </a>
+                    </li>
                 </ul>
                 <ul class="footer_nav-list">
                     <li class="list_item">
