Disabled styles for right footer content.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -75,14 +75,14 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Datasets
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Reports
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -92,14 +92,14 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         API's
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Open source projects
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -109,19 +109,19 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Toolkits
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Online learning
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Brochures
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -131,19 +131,19 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Regulations
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Notice and comment
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="list_item">
-                                    <a href="" class="list_link">
+                                    <span class="list_link list_link__disabled">
                                         Compliance guides
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
