--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -93,7 +93,7 @@
                             <ul class="footer_list">
                                 <li class="list_item">
                                     <span class="list_link list_link__disabled">
-                                        API's
+                                        APIs
                                     </span>
                                 </li>
                                 <li class="list_item">
