Adds a better note to the wrapper modifier.

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -88,7 +88,7 @@
               <input type="submit" value="edit on codepen.io" class="docs-pattern_footer-edit-btn">
             </form>
             <ul class="docs-notes">
-              <li>...</li>
+              <li>The .content area has a visual gutter twice the size of a normal wrapper because the gutters from the sidebar and main content divs add to the gutters of the wrapper. This modifier gives you a wrapper with wider gutters to match the visual gutters of the .content area.</li>
             </ul>
           </footer>
         </div>
