--- a/static/css/main.less
+++ b/static/css/main.less
@@ -108,4 +108,5 @@ img {
 @import (less) "press-resources.less";
 @import (less) "contact-us.less";
 @import (less) "bureau.less";
+@import (less) "bureau-structure.less";
 @import (less) "media.less";
