--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -32,6 +32,10 @@
             .grid_column(6);
         });
     }
+    
+    .expandable {
+        background-color: inherit;
+    }
 }
 
 .bureau-bio {
